Fixed D3 alignment on homepage.

--- a/src/components/CollegeResult.module.css
+++ b/src/components/CollegeResult.module.css
@@ -6,7 +6,7 @@
 
 @media only screen and (max-width: 640px) {
   .item:before {
-    padding-left: 1.5rem;
+    padding-left: 0.1rem;
   }
 }
 
