--- a/src/components/CollegeSearch.module.css
+++ b/src/components/CollegeSearch.module.css
@@ -1,5 +1,5 @@
 .input {
-  padding: calc(1vh + 0.85rem) 4rem calc(1vh + 0.85rem) calc(8vh + 2.25rem);
+  padding: calc(1vh + 0.85rem) 1rem calc(1vh + 0.85rem) calc(8vh + 2.25rem);
   box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.14);
   transition: all 0.1s;
 }
